--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -5,9 +5,8 @@
   <hr/>
   <div class="row justify-content-center h-100">
     <div class="col col-sm-6 col-md-6 col-lg-4 col-xl-3">
-      <form>
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Message" />
+          <input type="text" class="form-control" [(ngModel)]="message" placeholder="Message" />
         </div>
         <div class="form-group">
           <div class="container">
@@ -16,7 +15,6 @@
             </div>
           </div>
         </div>
-      </form>
     </div>
   </div>
 </div>
