--- a/src/app/consumer/consumer.component.html
+++ b/src/app/consumer/consumer.component.html
@@ -7,6 +7,12 @@
         <div class="col">
           {{msg.message}}
         </div>
+        <div class="col">
+          {{msg.message}}
+        </div>
+        <div class="col">
+          <button class="btn btn-primary" (click)="remove(msg)">Remove message</button>
+        </div>
       </div>
     </li>
   </ul>
